@@ -1,5 +1,3 @@
-import org.gradle.internal.jvm.Jvm
-
 plugins {
     id 'application'
     id 'de.undercouch.download' version '4.0.0'
@@ -10,24 +8,15 @@ sourceSets {
     main.resources.srcDirs = ["assets/"]
 }
 
+static def osName() { System.getProperty('os.name').toLowerCase(Locale.ROOT) }
+
+mainClassName = "launcher.DesktopLauncher"
+
 dependencies {
     compile project(":client")
     compile "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-freetype-platform:$freetypeVersion:natives-desktop"
 }
-
-static def osName() { System.getProperty('os.name').toLowerCase(Locale.ROOT) }
-static def getJDK() { Jvm.current().getJavaHome().path }
-
-mainClassName = "launcher.DesktopLauncher"
-
-// Determine where the JDK is going to be (Windows/Linux and Mac)
-def jdkFolder = "${projectDir}/build/jdk"
-def runtimePath = osName().contains('mac') ? "${buildDir}/jre/contents/plugins/Java.runtime/Contents/Home" : "${buildDir}/jre"
-def distributionPath = "${buildDir}/distribution/"
-def inputPath = "${projectDir}/build/input/"
-def jpackagePath = osName().contains('mac') ? "${jdkFolder}/jdk-14.jdk/Contents/Home/bin/jpackage" : "${jdkFolder}/jdk-14/bin/jpackage"
-def jdkPath = osName().contains('mac') ? "${jdkFolder}/jdk-14.jdk" : "${jdkFolder}/jdk-14"
 
 if (osName().contains('mac')) {
     run {
@@ -47,6 +36,7 @@ task dist(type: Jar) {
 dist.dependsOn classes
 run.dependsOn classes
 
+<<<<<<< HEAD
 task prepareInput(dependsOn: dist) {
     copy {
         from files(sourceSets.main.resources.srcDirs)
@@ -59,6 +49,18 @@ task prepareInput(dependsOn: dist) {
 task jlink(type: Exec, dependsOn: prepareInput) {
 	
 	doFirst { 
+=======
+// Determine where the JDK is going to be (Windows/Linux and Mac)
+def runtimePath = "${buildDir}/jre"
+if (osName().contains('mac')) {
+	runtimePath = "${buildDir}/jre/contents/plugins/Java.runtime/Contents/Home"
+}
+
+// creates a replacement runtime via jlink command (much smaller than jpackage)
+task jlink(type: Exec, dependsOn: dist) {
+
+	doFirst() {
+>>>>>>> parent of 8e84ecc... Merge branch 'master' into gdx-languages
 		download {
 
 			if (osName().contains('windows')) {
@@ -69,6 +71,7 @@ task jlink(type: Exec, dependsOn: prepareInput) {
 				src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_osx-x64_bin.tar.gz'
 			}
 
+<<<<<<< HEAD
 			if (!file(jdkFolder).exists()) {
 				file(jdkFolder).mkdirs()
 			}
@@ -88,10 +91,29 @@ task jlink(type: Exec, dependsOn: prepareInput) {
 				}
 
 				into jdkFolder
+=======
+			dest projectDir
+			overwrite false
+		}
+
+		if (!file("${projectDir}/jdk-14").exists()) {
+			copy {
+
+				if (osName().contains('windows')) {
+					from zipTree("${projectDir}/openjdk-14-jpackage+8_windows-x64_bin.zip")
+				} else if (osName().contains('linux')) {
+					from tarTree("${projectDir}/openjdk-14-jpackage+8_linux-x64_bin.tar.gz")
+				} else if (osName().contains('mac')) {
+					from tarTree("${projectDir}/openjdk-14-jpackage+8_osx-x64_bin.tar.gz")
+				}
+
+				into projectDir
+>>>>>>> parent of 8e84ecc... Merge branch 'master' into gdx-languages
 			}
 		}
 	}
 	
+<<<<<<< HEAD
     // Overwrite previous packaged application.
     if (file("${buildDir}/distribution/${project.appName}").exists()) {
         delete(file("${buildDir}/distribution/${project.appName}"))
@@ -121,61 +143,87 @@ task jlink(type: Exec, dependsOn: prepareInput) {
         delete(file("${runtimePath}/legal"))
         delete fileTree("${runtimePath}/bin").matching { include "api*.dll" }
     }
+=======
+	// Overwrite previous packaged application.
+	if (file("${buildDir}/distribution/${project.appName}").exists()) {
+		delete(file("${buildDir}/distribution/${project.appName}"))
+	}
+	
+	// Overwrite previous bundled jre.
+	if (file(runtimePath).exists()) {
+		delete(file(runtimePath))
+	}
+	
+	commandLine = [
+			"${projectDir}/jdk-14/bin/jlink",
+			'-p', "${projectDir}/jdk-14/jmods",
+			'--add-modules', 'java.base,java.desktop,jdk.unsupported,java.logging',
+			'--strip-debug',
+			'--no-header-files',
+			'--no-man-pages',
+			'--strip-native-commands',
+			'--vm=server',
+			'--compress=2',
+			'--output', runtimePath
+	]
+
+	doLast {
+		// Final debloat for jpackage
+		delete(file("${runtimePath}/conf"))
+		delete(file("${runtimePath}/legal"))
+	}
+>>>>>>> parent of 8e84ecc... Merge branch 'master' into gdx-languages
 }
 
 // creates application bundle (executable + runtime)
 task appBundle(type: Exec, dependsOn: jlink) {
 
-    doFirst {
-        System.out.println("Runtime Path: " + runtimePath)
-        System.out.println("Distribution Path: " + distributionPath)
-        System.out.println("Input Path: " + inputPath)
-        System.out.println("Jpackage Path: " + jpackagePath)
-        System.out.println("Jdk Path: " + jdkPath)
-    }
-    def mainJarFileName = "${project.name}-${project.version}.jar"
-    def commands = [
-            jpackagePath,
-            '--name', project.appName,
-            '--vendor', "Argentum Online Libre",
-            '--app-version', "${project.version}",
-            '--output', distributionPath,
-            '--runtime-image', runtimePath,
-            '--input', inputPath,
-            '--main-class', project.mainClassName,
-            '--main-jar', mainJarFileName
-    ]
+	def commands = [
+			"${projectDir}/jdk-14/bin/jpackage",
+			'--name', project.appName,
+			'--vendor', "Argentum Online Libre",
+			'--app-version', "${project.version}",
+			'--output', "${buildDir}/distribution",
+			'--runtime-image', runtimePath,
+			'--input', "${buildDir}/libs",
+			'--main-class', project.mainClassName,
+			'--main-jar', "${project.name}-${project.version}.jar"
+	]
 
-    if (osName().contains('windows')) {
-        commands << "--icon"
-        commands << "${projectDir}/assets/data/icons/ao.ico"
-    } else if (osName().contains('linux')) {
-        commands << "--icon"
-        commands << "${projectDir}/assets/data/icons/ao.png"
-    } else if (osName().contains('mac')) {
-        commands << "--icon"
-        commands << "${projectDir}/assets/data/icons/ao.icns"
-        commands << "--java-options"
-        commands << "-XstartOnFirstThread"
-    }
+	if (osName().contains('windows')) {
+		commands << "--icon"
+		commands << "${projectDir}/assets/data/icons/ao.ico"
+	} else if (osName().contains('linux')) {
+		commands << "--icon"
+		commands << "${projectDir}/assets/data/icons/ao.png"
+	} else if (osName().contains('mac')) {
+		commands << "--icon"
+		commands << "${projectDir}/assets/data/icons/ao.icns"
+		commands << "--java-options"
+		commands << "-XstartOnFirstThread"
+	}
 
-    commandLine = commands
+	commandLine = commands
+	
+	doLast() {
+		copy {
+			if (osName().contains('windows')) {
+				from("${projectDir}/assets/data/icons/ao.ico")
+			} else if (osName().contains('linux')) {
+				from("${projectDir}/assets/data/icons/ao.png")
+			} else if (osName().contains('mac')) {
+				from("${projectDir}/assets/data/icons/ao.icns")
+			}
+			from("${projectDir}/assets")
+			from("${projectDir}/Config.json")
+			into("${buildDir}/distribution/${project.appName}/app")
+		}
 
-    doLast() {
-        copy {
-            from("${projectDir}/Config.json")
-            if (osName().contains('mac')) {
-                into("${distributionPath}${project.appName}.app/Contents/Resources/")
-            } else {
-                into("${distributionPath}${project.appName}/app")
-            }
-        }
+		// Debloat for Windows users.
+		delete fileTree("${buildDir}/distribution/${project.appName}/bin").matching { include "*.dll" exclude "applauncher.dll"}
+		delete fileTree("${buildDir}/distribution/${project.appName}/app").matching { include "api*.dll" }
 
-        // Debloat for Windows users.
-        delete fileTree("${distributionPath}/${project.appName}/bin").matching { include "*.dll" exclude "applauncher.dll" }
-        delete fileTree("${distributionPath}/${project.appName}/app").matching { include "api*.dll" }
-
-        System.out.println("Application '${project.appName}' packaged.")
-        System.out.println(" -> location: ${distributionPath}${project.appName}/")
-    }
+		System.out.println("Application '${project.appName}' packaged.")
+		System.out.println(" -> location: ${buildDir}/distribution/${project.appName}/")
+	}
 }
